--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Template HTML CSS</title>
+        <title>14 LC 12 Cols</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
@@ -12,25 +12,30 @@
 
         <!-- header -->
         <header>
-            <div class="container">
-                HEADER
-            </div>
+            <div class="w-1"></div>
         </header>
         <!-- /header -->
 
         <!-- main -->
         <main>
-            <div class="container">
-                MAIN
+            <div class="main-container">
+                <div class="w-1-4">
+                    <div class="blue-elem"></div>
+                    <div class="blue-elem"></div>
+                    <div class="blue-elem"></div>
+                    <div class="blue-elem"></div>
+                </div>
+
+                <div class="w-1-4">
+                    <div class="blue-elem big"></div>
+                </div>
             </div>
         </main>
         <!-- /main -->
 
         <!-- footer -->
         <footer>
-            <div class="container">
-                FOOTER
-            </div>
+            <div class="w-1"></div>
         </footer>
         <!-- /footer -->
         
